	* Fixed bug #11128: Validation issue: End tag for "br" omitted, but OMITTAG NO was specified in typo3/sysext/cms/layout/db_layout.php
	* Fixed bug #11129: Validation issue: End tag for "br" omitted, but OMITTAG NO was specified in various files in typo3/sysext/cms/web_info/
	* Fixed bug #11133: Validation issue: End tag for "br" omitted, but OMITTAG NO was specified in typo3/sysext/impexp/modfunc1/class.tx_impexp_modfunc

2009-05-26  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #11106: Validation issue: End tag for "br" omitted, but OMITTAG NO was specified in typo3/alt_db_navframe.php
	* Fixed bug #11121: Validation issue: End tag for "br" omitted, but OMITTAG NO was specified in typo3/alt_doc.php
	* Fixed bug #11122: Validation issue: End tag for "br" omitted, but OMITTAG NO was specified in typo3/file_newfolder.php
	* Fixed bug #11123: Validation issue: End tag for "br" omitted, but OMITTAG NO was specified in typo3/init.php

2009-05-25  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11169: Syntax error in ADOdb PDO-SQLite driver

2009-05-23  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.0alpha3

2009-05-23  Oliver Hader  <oliver@typo3.org>

	* Follow-up to #10597: Faulty call to frontend editing instance instead of admin panel
	* Fixed bug #11039: Simulating frontend user groups via admin panel does not work
	* Cleanup: Fixed formatting issues in t3lib PHP files
	* Cleanup: Fixed formatting issues in typo3 and test PHP files

2009-05-22  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #9994: preg_replace doesn't work with entities_to_utf8 (class.t3lib_cs.php)
	* Follow-up to #9994: preg_replace doesn't work with highlight xml (class.t3lib_syntaxhl.php)
	* Follow-up to #11044: mass uploader didn't worked because missing settings

2009-05-22  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed ChangeLog
	* Fixed bug #10816: tslib_content calls deprecated function makeInstanceClassName (thanks to Susanne Moog)